[package]
name = "breakwater-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/sbernauer/aya", branch = "array-set" } # As of 2022-05-08 we need to stay on main otherwise we get compilation errors
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", rev = "aya-log-v0.1.10" }
breakwater-common = { path = "../breakwater-common" }
memoffset = "0.6.5"

[[bin]]
name = "breakwater"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
