[package]
name = "breakwater"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.11.0", features=["async_tokio"] }
aya-log = "0.1.10"
breakwater-common = { path = "../breakwater-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "breakwater"
path = "src/main.rs"
